[package]
name = "px-daemon"
version = "0.1.0"
authors = ["Skarlett <zykl@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[dependencies.async-std]
version = "^1.5.0"
features = ["unstable", "attributes"]