[package]
name = "px-daemon"
version = "0.0.0"
authors = ["Skarlett"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html




[dependencies]



[dependencies.px-compat]
path = "../px-compat"


# Core async engine
[dependencies.async-std]
version = "~1.5.0"
features = ["unstable", "attributes"]

