[package]
name = "corelib"
version = "0.0.1"
authors = ["Skarlett"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[features]
prce = ["grep-pcre2"]

[dependencies.async-trait]
version = "0.1"

[dependencies.tokio]
version = "0.2"
features = ["parking_lot", "time", "net", "io-util", "sync", "rt-util"]

[dependencies.smallvec]
version = "*"


[dependencies.grep-regex]
version = "0.1"

[dependencies.grep-pcre2]
version = "0.1"
optional = true

