[package]
name = "px-engine"
version = "0.0.1"
authors = ["Skarlett"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.uuid]
version = "0.8"
features = ["v4"]

[dependencies.tokio]
version = "0.2.22"
features = ["parking_lot", "full"]

[dependencies.serde]
version = "1.0.39"
features = ["derive"]

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.2"
pnet = "0.26"
async-trait = "0.1"
evc = "0.1.2"
rand = "0.7"
cidr-utils = "0.5"
structopt = "0.3"
smallvec = "1.4"
serde_json = "1"
syn = "^1.0.33"
