[package]
name = "px-engine"
version = "0.0.1"
authors = ["Skarlett"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "netcore"

#[features]
#default = []
#lua = "mlua"


#[dependencies.mlua]
#version = "0.4"
#optional = true
#features = ["lua53"]

[dependencies.uuid]
version = "0.8"
features = ["v4"]

[dependencies.anymap]
version = "*"

[dependencies.tokio]
version = "0.2.22"
features = ["parking_lot", "full"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.smallvec]
version = "1.4"
features = ["serde"]

[dependencies.regex]
version = "1"
features = ["perf"]

[dependencies]
# In-use dependencies
tracing = "0.1"
tracing-subscriber = "0.2"
pnet = "0.26"
async-trait = "0.1"
evc = "0.1.2"
rand = "0.7"
cidr-utils = "0.5"
structopt = "0.3"
serde_json = "1.0"
num_cpus = "1.13"
tokio-native-tls = "0.1"
plex = "*"

# Dependency conflict patches
syn = "^1.0.33"