[package]
name = "px-nmap"
version = "0.1.0"
authors = ["Skarlett <zykl@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "px_nmap"

[dependencies]
px-core = { path = "../px-core" }
regex = "1.4.3"

tokio = { version = "1.2.0", features = ["io-util"] }