[package]
name = "pxcore"
version = "0.0.0"
authors = ["Skarlett"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[features]
default = []
logging = ["tracing"]


[dependencies.uuid]
version = "*"

[dependencies.async-trait]
version = "~0.1.30"

[dependencies.tracing]
version = "~0.1.13"
optional = true

[dependencies.httparse]
version = "~1.3.4"

[dependencies.trust-dns-resolver]
version = "*"


[dependencies.futures]
version = "*"

# Core async engine
[dependencies.tokio]
version = "0.2"
features = ["rt-core", "sync", "tcp", "parking_lot", "time", "io-util", "stream"]