[package]
name = "pxcore"
version = "0.0.0"
authors = ["Skarlett"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[features]
default = []
logging = ["tracing"]


[dependencies.uuid]
version = "0.8.1"
features = ["v4"]

[dependencies.async-trait]
version = "~0.1.30"

[dependencies.tracing]
version = "~0.1.13"
optional = true

[dependencies.httparse]
version = "~1.3.4"

[dependencies.smallvec]
version = "*"



[dependencies.serde]
version = "1.0"

[dependencies.serde_derive]
version = "1.0"

[dependencies.bincode]
version = "1.2.1"



[dependencies.futures]
version = "0.3.4"

# Core async engine
[dependencies.tokio]
version = "0.2"
features = ["rt-core", "sync", "tcp", "parking_lot", "time", "io-util", "stream", "dns"]