[package]
name = "pxcore"
version = "0.0.0"
authors = ["Skarlett"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies.uuid]
version = "0.8"
features = ["v4"]

[dependencies.httparse]
version = "1.3"

[dependencies.smallvec]
version = "1.4"

[dependencies.typemap]
version = "0.3"

[dependencies.serde]
version = "1.0"

[dependencies.serde_derive]
version = "1.0"

[dependencies.bincode]
version = "1.2"

[dependencies.futures]
version = "0.3"

[dependencies.async-trait]
version = "0.1"

[dependencies.tracing]
version = "0.1"
optional = true

[dependencies.tokio]
version = "0.2"
features = ["rt-core", "sync", "tcp", "parking_lot", "time", "io-util", "stream", "dns"]