[package]
name = "pxlua"
version = "0.0.0"
authors = ["Skarlett"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.async-trait]
version = "0.1"

[dependencies.mlua]
version = "*"
features = ["async"]

[dependencies.lazy_static]
version = "*"

[dependencies.bstr]
version = "*"

[dependencies.tokio]
version = "0.2"
features = ["parking_lot", "time", "net", "io-util", "sync", "rt-util"]

[dependencies.corelib]
path = "../corelib"