[package]
name = "px-scheduler"
version = "0.0.1"
authors = ["Skarlett"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.async-trait]
version = "0.1"

[dependencies.uuid]
version = "0.8"
features = ["v4"]

[dependencies.tokio]
version = "0.2.22"
features = ["parking_lot", "full"]

[dependencies.diesel]
version = "1.4.5"
features = ["mysql"]

[dependencies.tokio-diesel]
version = "0.3"

[dependencies.evc]
version = "0.1.2"

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.2"
smallvec = "1.4"
pnet = "0.26.0"