[package]
name = "px-lua"
version = "0.0.9-devel"
authors = ["Skarlett <zykl@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "px_lua"

[dependencies]

[dependencies.mlua]
version = "0.5"
optional = true
features = ["lua53", "luajit"]
